# hackathon-physical-ai-textbook

./: .gitattributes  .gitignore  CHATBOT_IMPLEMENTATION.md  CLAUDE.md  IMPLEMENTATION.md  MIGRATION_STATUS.md  QUICKSTART.md  README.md  render.yaml
backend/: .dockerignore  .env.chatbot.example  .env.example  .gitignore  README.md  alembic.ini  build.sh  conftest.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1ff6300a0768_add_name_to_users.py  20251130_simplify_profile.py  20251202_add_better_auth_profile_fields.py  4e3325ea1144_initial_migration_users_profiles_oauth_.py
backend/auth-ts/: .env.example  .gitignore  README.md  package.json  setup.md  tsconfig.json
backend/auth-ts/src/: auth.ts  db.ts  index.ts  migrate.ts
backend/scripts/: check_users.py  chunker.py  cleanup_tables.py  cleanup_test_user.py  clear_data.py  ingest_textbook.py  setup_qdrant.py
backend/scripts/parsers/: markdown_parser.py
backend/src/: config.py  database.py  main.py
backend/src/chatbot/: README.md  agent.py  context.py  models.py  prompts.py
backend/src/dependencies/: auth.py  user_db.py
backend/src/middleware/: jwt_auth.py
backend/src/models/: __init__.py  email_verification.py  oauth.py  profile.py  user.py
backend/src/routers/: __init__.py  auth.py  chat.py  oauth.py  profile.py
backend/src/schemas/: __init__.py  auth.py  chat.py  email_verification.py  profile.py  user.py
backend/src/services/: auth_service.py  email_service.py  embedding_service.py  profile_service.py  user_manager.py
backend/src/utils/: email_templates.py  rate_limit.py  security.py
backend/tests/: __init__.py  conftest.py
backend/tests/chatbot/: test_agent.py  test_guardrails.py  test_retriever.py
backend/tests/integration/: test_google_oauth.py  test_login_unverified.py  test_profile_api.py  test_protected_endpoints.py  test_registration_flow.py  test_resend_verification.py  test_session_persistence.py  test_verification_expiration.py
backend/tests/routers/: test_chat.py
book-source/: .env.example  (+9 more)
(+180 files in other folders)
