[project]
name = "physical-ai-auth"
version = "0.1.0"
description = "Authentication and onboarding system for Physical AI Learning Platform"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Physical AI Team"}
]
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "fastapi-users[oauth,sqlalchemy]>=15.0.1",
    "httpx>=0.28.1",
    "httpx-oauth>=0.16.1",
    "jinja2>=3.1.6",
    "mypy>=1.19.0",
    "openai-agents>=0.6.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.7.0",
    "sendgrid>=6.12.5",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.5.0",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "mypy>=1.7.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "fastapi_users.*",
    "httpx_oauth.*",
    "sendgrid.*",
    "passlib.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
